# ai-alpha-radar

./: .env.example  .gitignore  .vercelignore  AGENTS.md  BACKEND_BUILD.md  CLAUDE.md  DESIGN.md  PLAN.md  PRODUCT.md  README.md  pyproject.toml  vercel.json
.impeccable/: design.json
data/: README.md  bluesky_keywords.json  bluesky_mentions.sqlite  digg_ai_corpus.json  newsletters.json  predictions.jsonl  reddit_subreddits.json  youtube_keywords.json  youtube_outliers.json
docs/: AUDIT_AND_ROADMAP.md  DATABASE_MIGRATION.md  DATA_CONTRACT.md  WAVE_5_DESIGN.md
memory/: bugs-and-risks.md  current-strategy.md  decisions.md  next-actions.md  project-brief.md  session-summaries.md
mockups/: mockup-a.html  mockup-b.html  mockup-c.html  mockup-glass.html
pipeline/: batch_cache.py  burst.py  calibration.py  changepoint.py  cluster.py  cluster_identity.py  cold_start.py  demand.py  leadlag.py  lifecycle_horizons.py  log.py  meta_trends.py  models.py  niche_filter.py  normalize.py  novelty.py  persist.py  predict.py  questions.py  rrf.py  run.py  score.py  snapshot.py  summarize.py  topics.py
public/: data.json  index.html
screenshots/: v0.1.1-topics-pipeline.txt
scripts/: backfill_digg.py  backtest_predictions.py  gen_contract.py  inspect_one_card.py  inspect_one_demand_cluster.py  lint_no_innerhtml.sh  prune_legacy_predictions.py  refresh_youtube_outliers.py  render_reliability.py  topic_carryover.py
tests/: conftest.py  test_batch_cache.py  test_burst.py  test_calibration.py  test_changepoint.py  test_cluster.py  test_cluster_identity.py  test_cold_start.py  (+38 more)
(+61 files in other folders)
