[tool.poetry]
name = "ai-alpha-radar"
version = "0.1.0"
description = "Daily AI trend-detection pipeline for the AI Alpha Radar dashboard."
authors = ["Dean Kuhn <kuhnhomeuk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
httpx = "^0.27"
pydantic = "^2.7"
pandas = "^2.2"
numpy = "^1.26"
feedparser = "^6.0"
PyGithub = "^2.3"
sentence-transformers = "^3.0"
hdbscan = "^0.8.33"
umap-learn = "^0.5.6"
pymannkendall = "^1.4"
anthropic = "^0.40"
openai = "^1.50"
scikit-learn = "^1.5"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
ruff = "^0.5"
black = "^24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not slow'"
pythonpath = ["."]
markers = [
    "slow: tests that load local embedding or clustering models",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 100
target-version = ["py312"]
